syntax = "proto3";

package manager;

// Interface exported by manager for cluster agents
service Manager {
    // Agent pushes its node info to manager, and master responds
    // with its own node info.
    rpc SayHi(NodeInfo) returns (NodeInfo) {}

    // Agent notifies the manager when an application is finished
    // or the entry/main process does not exists.
    rpc NotifyDone(AppIndex) returns (NDReply) {}

    // TODO(lizhong): Get all the agent nodes
}

// Cluster node inforamtion.
// 
// Both manager and agents are treated as a node.
message NodeInfo {
    // Id of the node
    string Id = 1;
    // IP address
    string Ip = 2;
    // IP address port
    int32  Port = 3;
    // The node's heartbeat value
    int32 Heartbeat = 4;
}

// Application index
message AppIndex {
    string Id = 1;
}

// NotifyDone's reply message
message NDReply {}
